# DyRes

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
Notebooks/: 01-FS-LoadMat.ipynb  TestGasFlow1DFV_A.h5  TestGasFlow1DFV_A.json  TestGasFlow1DFV_A.mat  TestGasFlow1DFV_A_dyres.mat
dyres/: __init__.py  dyres.py
tests/: testload.py
